--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,31 @@
 html,
 body {
-  padding: 0;
+  padding: 5vh 0 0 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  line-height: 1.2;
+  overflow-x: hidden;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
 }
 
 * {
   box-sizing: border-box;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Balsamiq Sans', cursive;
+}
+
+li {
+  list-style: none;
 }
