--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,35 +1,81 @@
+/* :root {
+  --white: "#FFF";
+} */
+
 html,
 body {
-  padding: 5vh 0 0 0;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  line-height: 1.2;
-  overflow-x: hidden;
+	padding: 5vh 0 0 0;
+	margin: 0;
+	font-family: "Roboto", sans-serif;
+	font-size: 18px;
+	line-height: 1.2;
+	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
+	color: inherit;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 button {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Balsamiq Sans', cursive;
+h1,
+h2,
+h3,
+h4 {
+	font-family: "Balsamiq Sans", cursive;
 }
 
 h1 {
-  text-align: center;
+	text-align: center;
 }
 
 li {
-  list-style: none;
+	list-style: none;
+}
+
+input,
+textarea {
+	background: none;
+	font-family: inherit;
+	font-size: inherit;
+	border: 2px solid white;
+	display: block;
+	width: 100%;
+	resize: none;
+	padding: 2vh 1vw;
+	color: white;
+}
+
+input::placeholder,
+textarea::placeholder {
+	color: white;
+	opacity: 0.7;
+	z-index: 1;
+}
+
+input:invalid,
+textarea:invalid {
+	border-color: #f36859;
+}
+
+input:valid,
+textarea:valid {
+	border-color: #76c493;
+}
+
+button:disabled {
+	opacity: 0.7;
+}
+
+label {
+	display: none;
 }
