--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -6,6 +6,7 @@ html,
 body {
 	padding: 5vh 0 0 0;
 	margin: 0;
+	box-sizing: border-box;
 	font-family: "Roboto", sans-serif;
 	font-size: 18px;
 	line-height: 1.2;
